--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "node server.js",
     "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
+  "engines": {
+    "node": "16.x",
+    "npm":"8.x"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
